@@ -1,3 +1,8 @@
+2008-04-07  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* config/tc-i386.c (parse_real_register): Return AVX register
+	only if AVX is enabled.
+
 2008-04-07  Kaz Kojima  <kkojima@rr.iij4u.or.jp>
 
 	PR gas/6043
